--- a/P0/S1.md
+++ b/P0/S1.md
@@ -1,16 +1,14 @@
-# Encabezado 1
+# Historia de España
 
-Este es un párrafo normal
+Este archivo sirve para guardar a los reyes de España.
 
-Este es un texto que está en la 
-misma línea
-. Es una línea muy Larga..
+La historia tiene muchos reyes pero
+no
+todos se conocen.  
+¿Te suenan todos?
 
-Esto ya es otro párrafo
+En el siguiente enunciado aparecerán sin ordenar.
 
-Hola estoy probando  
-Esto ya si sale dentro de la línea de abajo  
-Se hace con el doble espacio
 
 # Lista no ordenadas
 
