Lista no ordenada

--- a/P0/S1.md
+++ b/P0/S1.md
@@ -7,15 +7,30 @@ no
 todos se conocen.  
 ¿Te suenan todos?
 
-En el siguiente enunciado aparecerán sin ordenar.
+En el siguiente enunciado aparecerán algunos reyes y no reyes.
+Adivina ha sido y cual no.
 
 
-# Lista no ordenadas
+# Lista con Reyes "Falsos" y verdaderos no ordenada.
 
-* item 1
-* item 2
-  * Elemento anidado
-    * Otro anidado
+* Carlos I
+    * Carlos II
+* Alfonso XII
+    * Alfonso XIII
+* Juan Carlos I
+* Felipe VI
+* Leonor I
+    * Isabel II
+* Froilán I
+* Fernando VI
+* Fernando VIII
+    * Isabel I
+    * Carlos V
+        * Carlos VI
+* Felipe II
+    * Felipe III
+        * Felipe IV
+* Felipe V
 
 # Listas ordenadas
 1. Leer la docu
