--- a/P0/S1.md
+++ b/P0/S1.md
@@ -32,9 +32,41 @@ Adivina ha sido y cual no.
         * Felipe IV
 * Felipe V
 
-# Listas ordenadas
-1. Leer la docu
-2. Practicar.
+# Lista ordenada de los Reyes de España
+Habsburgo
+1. Carlos I
+2. Felpie II
+3. Felipe III
+4. Felipe IV
+5. Carlos II
+
+Borbones
+
+6. Felipe V
+7. Fernando VI
+8. Carlos III
+9. Carlos IV
+10. Fernando VII
+
+Bonaparte
+
+11. José I
+
+Borbones
+
+12. Isabel II
+
+de Saboya
+
+13. Amadeo I
+
+Borbones
+
+
+14. Alfonso XII
+15. Alfonso XIII
+16. Juan Carlos I
+17. Felipe VI
 
 # Resaltar texto
 
