--- a/P0/S1.md
+++ b/P0/S1.md
@@ -69,9 +69,16 @@ Borbones
 17. Felipe VI
 
 # Resaltar texto
+  
+  Tenemos que tener en cuenta que después de Fernando VII
+  *hubo gente que no reconocía a Isabel II como reina* y se llamaban
+  **Carlistas**.
 
-  Este *texto está en cursica*. Esto no  
-  Este **texto está en negrita**. Este no
+  Estaban liderados por **Carlos V**.
+
+  Este hombre quería *gobernar España y volver al Antiguo Regimén*.
+  
+  Por suerte para **Isabel II** no consiguió vencer en *la primera guerra Carlista*.
 
 # Probando código
 
