--- a/P0/S1.md
+++ b/P0/S1.md
@@ -84,11 +84,22 @@ Borbones
 
 ```python
 # -- Comentario en Python
-a = 2
-print(f"La variable a vale {a}")
+# -- Pregunta: ¿En qué reinado se contruyó el metro de Madrid?
+
+a = "Alfonso XIII"
+print(f"El Metro de Madrid se contruyó durante el reinado de: {a}")
 ```
 
-Esta intrucción es `print(f"{a}")` es muy útil.
+¿Acertaste la pregunta? En `print(f"{a}")` debió de salirte Alfonso XIII.  
+Aquí te dejo una más díficil.
+```python
+# -- Comentario en Python
+# -- Pregunta: ¿Qué Rey reinó DOS veces?
+
+a = "Felipe V"
+print(f"El Rey que tuvo que reinar dos veces fue: {a}")
+```
+Sí, Felipe V tuvo que volver a reinar después del fallecimiento prematuro de Fernando VI.
 
 # Enlaces
 
