--- a/P0/S1.md
+++ b/P0/S1.md
@@ -103,18 +103,36 @@ Sí, Felipe V tuvo que volver a reinar después del fallecimiento prematuro de F
 
 # Enlaces
 
+## Enlaces Internos
+
+¿Cuáles fueron los reyes de España?
+[Reyes de España](Lista-ordenada-de-los-Reyes-de-España)
+
+¿Quieres saber cuales fueron las fechas de su nacimiento?
+[Fechas](Fechas)
+
 ## Enlaces Externos
 
-[Mardown](https://es.wikipedia.org/wiki/Markdown)
+Aquí dejo algunos enlaces interesantes a parte de lo que sale aquí:
 
-Mas información en la sección [Enlaces](#Enlaces)
-[Enlaces2](#Resaltado-de-texto)
+[Carlismo](https://es.wikipedia.org/wiki/Carlismo)  
+
+[Metro de Madrid](https://es.wikipedia.org/wiki/Metro_de_Madrid)
+
+[Borbones](https://es.wikipedia.org/wiki/Casa_de_Borb%C3%B3n)
+
+Mas información en la sección: [Citas](#Citas)
 
 # Imágenes
 
-![](Logo-urjc.png)
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/1/1e/Charles_I_of_Spain_-_Carlos_I_de_Espa%C3%B1a.jpg/245px-Charles_I_of_Spain_-_Carlos_I_de_Espa%C3%B1a.jpg)
+![](https://upload.wikimedia.org/wikipedia/commons/thumb/2/2d/Portrait_of_Philip_II_of_Spain_by_Sofonisba_Anguissola_-_002b.jpg/245px-Portrait_of_Philip_II_of_Spain_by_Sofonisba_Anguissola_-_002b.jpg)
+
+Carlos I a la izquierda y Felipe II a la derecha.
+
 
 ![](https://upload.wikimedia.org/wikipedia/commons/2/2f/CC_BY-SA_3.0.png)
+![](Logo-urjc.png)
 
 # Citas
 
