--- a/P0/S1.md
+++ b/P0/S1.md
@@ -136,7 +136,15 @@ Carlos I a la izquierda y Felipe II a la derecha.
 
 # Citas
 
-> Aquí pones tu cita...
+> Se armó la de San Quintín.  ***FelipeII***  
+> Mandé mis barcos a luchar contra los ingleses, no contra los elementos.  ***FelipeII*** 
+
+> Los mismos perros con distinto collar. ***Fernando VII***
+
+> Al enemigo que huye, puente de plata.  ***Gonzalo Fernández de Córdoba* (El Gran Capitán)**  
+> Más vale morir con honra que vivir deshonrado. ***Hernán Cortés***
+> Más vale tener honra sin barcos que barcos sin honra.  ***El Almirante Castro Méndez Núñez en 1865/1866***
+
 
 |         | Col 1 | Col 2| Col 3| Col4 |
 |---------|-------|------|------|------|
