--- a/P0/S1.md
+++ b/P0/S1.md
@@ -43,30 +43,31 @@ Habsburgo
 Borbones
 
 6. Felipe V
-7. Fernando VI
-8. Carlos III
-9. Carlos IV
-10. Fernando VII
+7. Luis I
+8. Fernando VI
+9. Carlos III
+10. Carlos IV
+11. Fernando VII
 
 Bonaparte
 
-11. José I
+12. José I
 
 Borbones
 
-12. Isabel II
+13. Isabel II
 
 de Saboya
 
-13. Amadeo I
+14. Amadeo I
 
 Borbones
 
 
-14. Alfonso XII
-15. Alfonso XIII
-16. Juan Carlos I
-17. Felipe VI
+15. Alfonso XII
+16. Alfonso XIII
+17. Juan Carlos I
+18. Felipe VI
 
 # Resaltar texto
   
@@ -99,7 +100,8 @@ Aquí te dejo una más díficil.
 a = "Felipe V"
 print(f"El Rey que tuvo que reinar dos veces fue: {a}")
 ```
-Sí, Felipe V tuvo que volver a reinar después del fallecimiento prematuro de Fernando VI.
+Sí, Felipe V tuvo que volver a reinar después del fallecimiento prematuro de Luis I.  
+También reinó dos veces Fernando VII aunque su primer reinado no llegó ni a dos meses.
 
 # Enlaces
 
@@ -145,10 +147,27 @@ Carlos I a la izquierda y Felipe II a la derecha.
 > Más vale morir con honra que vivir deshonrado. ***Hernán Cortés***
 > Más vale tener honra sin barcos que barcos sin honra.  ***El Almirante Castro Méndez Núñez en 1865/1866***
 
+# Fechas
 
-|         | Col 1 | Col 2| Col 3| Col4 |
-|---------|-------|------|------|------|
-|  Fila 1 |   1   |   2  |   3  |  4   |
-|  Fila 2 |   2   |   4  |   6  |  8   |
-|  Fila 3 |   3   |   6  |   9  |  12  |
+|    Reyes          | Nacimiento | Fallecimiento |   Dinastía   | Años de Reinado |
+|-------------------|------------|---------------|--------------|-----------------|
+|  **Carlos I**     |   1500     |   1556        |   Habsburgo  |  40   |
+|  Felipe II        |   1527     |   1598        |   Habsburgo  |  42   |
+|  **Felipe III**   |   1578     |   1621        |   Habsburgo  |  23   |
+|  Felipe IV        |   1605     |   1665        |   Habsburgo  |  44   |
+|  **Carlos II**    |   1661     |   1700        |   Habsburgo  |  35   |
+|  Felipe V         |   1683     |   1746        |   Borbones   |  24   |
+|  **Luis I**       |   1707     |   1724        |   Borbones   |  0    |
+|  Felipe V         |   1683     |   1746        |   Borbones   |  22   |
+|  **Fernando VI**  |   1713     |   1759        |   Borbones   |  13   |
+|  Carlos III       |   1716     |   1788        |   Borbones   |  29   |
+|  **Carlos IV**    |   1748     |   1819        |   Borbones   |  20   |
+|  Fernando VII     |   1784     |   1833        |   Borbones   |  0    |
+|  **José I**       |   1768     |   1844        |   Bonaparte  |  5    |
+|  Fernando VII     |   1784     |   1833        |   Borbones   |  19   |
+|  **Isabel II**    |   1830     |   1904        |   Borbones   |  35   |
+|  Amadeo I         |   1845     |   1890        |   Saboya     |  2    |
+|  **Alfonso XII**  |   1857     |   1885        |   Borbones   |  10   |
+|  Alfonso XIII     |   1886     |   1941        |   Borbones   |  44   |
+
 
