nuevo pdf el anterior estaba mal.

--- a/P0/S1.md
+++ b/P0/S1.md
@@ -108,10 +108,10 @@ También reinó dos veces Fernando VII aunque su primer reinado no llegó ni a d
 ## Enlaces Internos
 
 ¿Cuáles fueron los reyes de España?
-[Reyes de España](Lista-ordenada-de-los-Reyes-de-España)
+[Reyes de España](#Lista-ordenada-de-los-Reyes-de-España)
 
 ¿Quieres saber cuales fueron las fechas de su nacimiento?
-[Fechas](Fechas)
+[Fechas](#Fechas)
 
 ## Enlaces Externos
 
